# hextofloader

./: .pre-commit-config.yaml  README  pyproject.toml
hextofloader/: config_parser.py  dataframe_reader.py
hextofloader/data_sources/: flash.py  lab.py  source_reader.py
hextofloader/tutorial/: LAB_TUTORIAL.yaml
tests/: test_hextofloader.py
tutorial/: LAB_TUTORIAL.yaml  lab_tutorial.ipynb
tutorial/raw/: 1.h5  5.h5
