[tool.poetry]
name = "hextofloader"
version = "0.1.0"
description = ""
authors = ["M. Zain Sohail <zainsohail04@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.22.2"
h5py = "^3.6.0"
dask = "^2022.2.0"
pandas = "^1.4.1"
fastparquet = "^0.8.0"
pyarrow = "^7.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
pytest-xdist = "^2.5.0"
pytest-clarity = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
