[tool.poetry]
name = "hextofloader"
version = "0.1.0"
description = ""
authors = ["M. Zain Sohail <zainsohail04@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10"
numpy = "^1.23.1"
h5py = "^3.7.0"
dask = "^2022.7.1"
pandas = "^1.4.3"
fastparquet = "^0.8.1"
pyarrow = "^9.0.0"
jupyter = {version = "^1.0.0", extras = ["notebook"], optional = true}
ipykernel = {version = "^6.15.1", extras = ["notebook"], optional = true}

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
pytest-xdist = "^2.5.0"
pytest-clarity = "^1.0.1"

[tool.poetry.extras]
notebook = ["jupyter", "ipykernel"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
